[package]
name = "TEST"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "PAOF"
path = "src/lib.rs"

[dependencies]
rand="0.8.4"

[[example]]
name = "RLWE"
path= "examples/RLWEex.rs"

[[example]]
name="Commitment"
path="examples/commitmentex.rs"

